09-env-var.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ckad00014
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: nginx:1.16
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
