11-configmap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-configmap
spec:
  containers:
    - name: demo
      image: nginx:stable
      volumeMounts:
      - name: config
        mountPath: "/some/path"
        readOnly: true
  volumes:
  - name: config
    configMap:
      name: some-config
