12-secret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret
spec:
  containers:
    - name: nginx-secret
      image: nginx:1.16
