14-readyness.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: probe-http
  name: probe-http
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: probe-http
  strategy: {}
  template:
    metadata:
      labels:
        app: probe-http
    spec:
      volumes:
        - name: config
          configMap:
            name: nginx-conf 
      containers:
      - image: nginx:1.16
        name: nginx
        readinessProbe:
          httpGet:
            path: /healthz/return200
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
