23-pv-pvc.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  labels:
    app: my-storage-app
spec:
  # nodeSelector:
  #   kubernetes.io/hostname: k2node1
  containers:
  - name: nginx
    image: nginx:1.16
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    volumeMounts:
      - mountPath: "/usr/share/nginx/html"
        name: task-pv-storage
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
