20-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc-kk
  namespace: ingress-kk
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: nginxdep
